z-index : fixed ._. kinda for the moment

--- a/Portfolio/Pages/Accueil/css/Style_Base.css
+++ b/Portfolio/Pages/Accueil/css/Style_Base.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary: rgb(63, 63, 63);
+    --test: rgb(0, 183, 255);
 }
 
 /* Général */
@@ -34,7 +35,7 @@ html {
     padding: 0;
     margin: 0;
     cursor: pointer;
-    z-index: 10;
+    z-index: 100;
 }
 
 .menu-icon:checked+label:before, .menu-icon:not(:checked)+label:before {
@@ -83,6 +84,7 @@ html {
 }
 
 .nav {
+
     position: fixed;
     top: 33px;
     right: 50px;
@@ -192,7 +194,7 @@ html {
 
 .nav ul li a:hover {
     text-decoration: none;
-    color: #ffeba7;
+    color: var(--test);
 }
 
 .nav ul li a:after {
@@ -250,10 +252,10 @@ html {
     h1 {
         font-size: 9vw;
         -webkit-text-stroke: 2px transparent;
-        /*text-stroke: 2px transparent;*/
-        -webkit-text-fill-color: #ffeba7;
+        /*text-stroke: 2px transparent;
+        -webkit-text-fill-color: #ffeba7;*/
         /*text-fill-color: #ffeba7;*/
-        color: #ffeba7;
+        color: var(--test);
     }
     .nav ul li a {
         font-size: 8vh;
@@ -699,7 +701,7 @@ section.parallax {
     text-align: center;
     width: 100%;
     padding: 0 50px;
-    z-index: 10;
+    z-index: 2;
 }
 
 @media screen and (max-width: 991px) {
@@ -757,7 +759,7 @@ section.parallax {
     position: fixed;
     top: 50%;
     right: 0;
-    z-index: 9999;
+    z-index: 5;
     border: 1px solid transparent;
     /* 位置與Hover一致 */
     outline: 1px solid transparent;
